# aoai-chat

./: LICENSE  README.md  pyproject.toml
src/aoai_chat/: __main__.py
src/aoai_chat/cli/: __init__.py  interactive.py  prompt.py
src/aoai_chat/parser/: __init__.py
